# chaichat

./: .env  .gitignore  Cargo.toml  README.md  private_key
.github/workflows/: windows_release.yml
src/: camera.rs  camera_frame.rs  chunk.rs  commands.rs  config.rs  consts.rs  discover.rs  identify.rs  input.rs  main.rs  network.rs  register.rs  screen.rs  terminal.rs  types.rs  utils.rs
src/p2p/: behaviour.rs  event.rs  main_loop.rs  mod.rs  relay.rs  transport.rs  utils.rs
