[package]
name = "terminal-screen-share"
version = "0.1.0"
authors = ["Piotr Czajka <czajka@protonmail.com>"]
edition = "2018"

[dependencies]
image = "*"
rand = "*"
itertools = "*"
dirs = "*"
env_logger = "*"
crossterm = "*"
serde = { version = "*", features = ["derive"] }
bincode = "*"
tui = { version = "*", default-features = false, features = ['crossterm'] }
chrono = { version = "*", features = ["serde"] }
reqwest = { version = "*", features = ["blocking", "json"] }
async-std = "*"
asynchronous-codec = "0.6"
bytes = "1"
either = "1.6.0"
futures = "0.3.1"
futures-timer = "3.0"
instant = "0.1.11"
libp2p-core = { git = "https://github.com/libp2p/rust-libp2p" }
libp2p-swarm = { git = "https://github.com/libp2p/rust-libp2p" }
log = "0.4"
prost-codec = { git = "https://github.com/libp2p/rust-libp2p" }
prost = "*"
thiserror = "1.0"
void = "1"
libp2p = { git = "https://github.com/libp2p/rust-libp2p", default-features = false,  features = ["dcutr", "relay", "plaintext", "identify", "tcp-async-io", "ping", "noise", "dns-async-std", "floodsub"] }
libp2p-yamux = { git = "https://github.com/libp2p/rust-libp2p" }
const_format = "*"

[dependencies.nokhwa]
version = "*"
features = ["input-msmf", "input-v4l"]
