[package]
name = "chaichat"
version = "0.0.1"
authors = ["Piotr Czajka <czajka@protonmail.com>"]
edition = "2021"

[dependencies]
image = "*"
rand = "*"
itertools = "*"
dirs = "*"
env_logger = "*"
crossterm = "*"
serde = { version = "*", features = ["derive"] }
bincode = "*"
tui = { version = "*", default-features = false, features = ['crossterm'] }
chrono = { version = "*", features = ["serde"] }
reqwest = { version = "*", features = ["blocking", "json"] }
async-std = "*"
asynchronous-codec = "0.6"
futures = "*"
futures-timer = "*"
instant = "*"
log = "*"
thiserror = "*"
libp2p = { version = "0.47.0", default-features = false,  features = ["dcutr", "relay", "plaintext", "identify", "tcp-async-io", "ping", "noise", "dns-async-std", "floodsub"] }
libp2p-yamux = "0.39.0"
const_format = "*"

[dependencies.nokhwa]
version = "*"
features = ["input-msmf", "input-v4l", "input-avfoundation"]
